2007-03-24  Paul J Stevens <paul@nfg.nl>

	* db.c, dbmail-imapsession.c, dm_base64.c, modules/authsql.c:
	valgrind fixes
	* check_dbmail_imapd.c, misc.c:
	fix bug #551

2007-03-23  Aaron Stone  <aaron@serendipity.cx>

	* imapd.c, lmtpd.c, pop3d.c, timsieved.c:
	Accepted patch from Leif Jackson to formally initialize some variables.
	* misc.c, serverparent.c:
	Accepted patch from Leif Jackson to close some minor memory leaks.

2007-03-23  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-imapsession.h, imap4.h:
	do chunked queries during header and envelope retrieval when opening
	large mailboxes (bug #539)
	* dbmail-message.c:
	avoid segfaults on empty messages (bug #544)
	* dbmail-imapsession.c:
	dont log raw password (closes: #545)
	* dbmail.conf:
	set default sieve port to 2000
	* debian/dbmail.postinst:
	add dbmail user during postinst preconfigure
	* pop3.c, dbmail-imapsession.c:
	log source ip on failed login (closes #543)
	* dbmail-imapsession.c:
	wrap flushing the recent flag in a transaction (bug #539)

2007-03-22  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-message.c:
	Change from g_mime_stream_write_string to g_mime_stream_write to
	handle embedded \0 characters (closes bug #549)

2007-03-17  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-message.c:
	remove some redundant joins

2007-03-16  Aaron Stone  <aaron@serendipity.cx>

	* misc.c:
	More logging in imap_get_partspec to try to nail down bug #533.

2007-03-16  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c:
	add x-dbmail-physmessage-id header only during retrieval, not during
	insertion (closes: #502)
	* check_dbmail_imapd.c, configure, dbmail-message.c, misc.c, misc.h:
	merging 8bit header patches (bug #538)

2007-03-14  Paul J Stevens <paul@nfg.nl>

	* pop3.c:
	check return value on db_update_pop (closes: #530)
	* dbmail-imapsession.c, imapcommands.c, test-scripts/testexpunge.imap, 
	  test-scripts/testimap.py:
	fix expunge response (closes #535)
